# 3dof-robotic-arm

./: .gitignore  LICENSE  README.md  install_project.sh  run.sh  start_docker.sh  start_ubuntu_24_04_docker.sh
scripts/install/: install_python_deps.sh  install_ros_jazzy.sh  install_udev_rule.sh
src/launcher/: package.xml  setup.py
src/launcher/launch/: robot_arm.launch.py
src/launcher/rviz/: robot_arm.rviz
src/robot_arm/: package.xml  setup.py
src/robot_arm/meshes/: link0.stl  link1.stl  link2.stl  link3.stl
src/robot_arm/robot_arm/forward_kinematics/: forward_kinematics.py
src/robot_arm/robot_arm/input_receiver/: input_receiver.py
src/robot_arm/robot_arm/inverse_kinematics/: inverse_kinematics.py
src/robot_arm/robot_arm/manual_path_programmer/: __init__.py  points_manager.py
src/robot_arm/robot_arm/plotter/: __init__.py  art.py  circle.py  config.py  motion.py  node.py  svg.py
src/robot_arm/robot_arm/servo_adapter/: __init__.py  servo_adapter.py
src/robot_arm/robot_arm/servo_adapter_dummy/: __init__.py  servo_adapter_dummy.py
src/robot_arm/robot_arm/trajectory_tracker/: trajectory_tracker.py
src/robot_arm/robot_arm/website_input/: __init__.py  models.py  state_machine.py  utils.py  web_server.py  website_input.py
src/robot_arm/robot_arm/website_input/resources/: app.js  index.html  styles.css
src/robot_arm/urdf/: robot_arm.urdf
udev/: 99-robot-arm.rules
